fix IE scroll issues by programmatically routing instead of using <a routerLink="...">... this issue with anchor tag routerLink should be investigated further.  Weird to have such a high impact on IE11 scroll performance

--- a/client/src/app/components/public/public-posts/public-posts-post/public-posts-post.component.css
+++ b/client/src/app/components/public/public-posts/public-posts-post/public-posts-post.component.css
@@ -96,6 +96,14 @@
   position: relative;
 }
 
+.posts-post-img-wrapper-div:hover {
+  cursor: pointer;
+}
+
+.posts-post-info:hover {
+  cursor: pointer;
+}
+
 .hidden-img {
   opacity: 0;
 }
